--- a/assets/css/utils/reset.css
+++ b/assets/css/utils/reset.css
@@ -100,4 +100,5 @@
         font-smooth: always;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        overflow-x: hidden;
     }
